AM_CFLAGS = -Wall -Werror

bin_PROGRAMS = dbsh

dbsh_SOURCES = main.c common.h \
               action.h action.c \
               buffer.h buffer.c \
               command.h command.c \
               db.h db.c \
               err.h err.c \
               history.h history.c \
               output.h output.c \
               prompt.h prompt.c \
               rc.h rc.c \
               results.h results.c \
               sig.h sig.c




