AM_CFLAGS = -Wall -Werror

bin_PROGRAMS = dbsh

dbsh_SOURCES = main.c common.h \
               action.h action.c \
               buffer.h buffer.c \
               command.h command.c \
               db.h db.c \
               err.h err.c \
               output.h output.c \
               parser.h parser.c \
               prompt.h prompt.c \
               rc.h rc.c \
               rl.h rl.c \
               results.h results.c \
               sig.h sig.c




