#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(dbsh, 0.4a, dangerous.ben@gmail.com)
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([main.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
LDFLAGS="$LDFLAGS -L/usr/local/lib"
AC_SEARCH_LIBS([tgetent], [ncurses curses termcap])
AC_CHECK_LIB([readline], [readline], [], [AC_CHECK_LIB([edit], [readline], [], [AC_CHECK_LIB([editline], [readline])])])
AC_CHECK_LIB([pthread], [pthread_create])
AC_SEARCH_LIBS([SQLConnect], [odbc iodbc], [], [AC_MSG_ERROR([failed to find an ODBC library])])

# Checks for header files.
CPPFLAGS="$CPPFLAGS -I/usr/local/include"
AC_HEADER_STDC
AC_CHECK_HEADERS([sql.h sqlext.h], [], [AC_MSG_ERROR([failed to find ODBC headers])])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
